used the knowledge of postition to adjust the svgs to the corner of the page as done in the design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Frontend Mentor | profile-card-component-main</title>
 </head>
 <body>
+  <div class="first-svg">
+    <img src="./images/bg-pattern-top.svg" alt="">
+  </div>
+  <div class="second-svg">
+    <img src="./images/bg-pattern-bottom.svg" alt="">
+  </div>
   <div class="container">
     <div class="card">
       <img src="./images/bg-pattern-card.svg" alt="">
